# dbt-docs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Taskfile.yml  dbdocs.yml.example  mkdocs.yml  pyproject.toml  versions.json
.claude/: design_patterns.md  llm_price_tag.yml  settings.json
.claude/agent-memory/docs-dev/: MEMORY.md  about-page.md  dag-layer-filter.md  group-by-string-format.md  nav-tab-redesign.md  node-detail-fields.md  non-physical-resource-nodes.md  per-column-tests.md  semantic-layer-rendering.md  static-api-v1-surface.md
.claude/agents/: docs-dev.md  release-manager.md
.claude/commands/: dbdocs-code-review.md  dbdocs-pr.md  deploy.md  docs.md  erd-ux-review.md  generate.md  release.md  test.md
.claude/hooks/: block-secrets.sh  post-edit-check.sh
.claude/scripts/: statusline-cost.py
.claude/skills/dbdocs-code-review/: SKILL.md
.claude/skills/dbdocs-pr/: SKILL.md
.claude/skills/dbterd-api/: SKILL.md
.claude/skills/erd-ux-review/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/spa-site/: SKILL.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: check_dpe_rules.py
.github/workflows/: ci_pr.yml  dpe-rules-watch.yml  publish-docs.yml  pypi-publish.yml  stale.yml
0.1.0/: 404.html  index.html  license.html  sitemap.xml
0.1.0/demo/: dbdocs-data.json  index.html
0.1.0/nav/development/: contributing-guide.html
0.1.0/nav/features/: catalog.html  column-lineage.html  graphs.html
0.1.0/nav/guide/: cli-references.html  configuration.html  how-it-works.html  quickstart.html  versioned-deploy.html
0.1.0/search/: search_index.js
1.0/: 404.html  CNAME  index.html  license.html  sitemap.xml
1.0/demo/: dbdocs-data.json  index.html
1.0/demo/assets/: app.js  style.css
1.0/nav/development/: contributing-guide.html
1.0/nav/features/: catalog.html  column-lineage.html  graphs.html
1.0/nav/guide/: cli-references.html  configuration.html  how-it-works.html  quickstart.html  versioned-deploy.html
1.0/search/: search_index.js  search_index.json
1.1/: 404.html  index.html  license.html  sitemap.xml
1.1/demo/: versions.json
1.1/demo/latest/: dbdocs-data.json  index.html
1.1/nav/development/: contributing-guide.html
1.1/nav/features/: catalog.html  column-lineage.html  graphs.html
1.1/nav/guide/: cli-references.html  configuration.html  how-it-works.html  (+2 more)
1.1/plans/: scale-mobile-e2e-branding.html
1.1/search/: search_index.js  search_index.json
1.2/: 404.html  index.html  license.html  sitemap.xml
1.2/demo/: versions.json
1.2/search/: search_index.js  search_index.json
1.3/: 404.html  index.html  license.html  sitemap.xml
1.3/demo/: versions.json
1.4/: 404.html  index.html  license.html  sitemap.xml
1.4/demo/: versions.json
1.4/search/: search_index.json
1.5/: 404.html  index.html  license.html  sitemap.xml
1.5/demo/: versions.json
1.5/search/: search_index.js
1.6/: 404.html  index.html  license.html  sitemap.xml
1.6/demo/: versions.json
1.6/search/: search_index.js  search_index.json
dbdocs/: __main__.py  main.py
dbdocs/cli/: main.py
dbdocs/core/: artifacts.py  config.py  exceptions.py  log.py
dbdocs/extract/: _sqlglot_lineage.py  column_lineage.py  erd.py  erd_json.py  graph.py  nodes.py  tests_index.py
dbdocs/modules/: __init__.py  base.py  standard.py
dbdocs/site/: api_schema.py  builder.py  deploy.py  inject.py
docs/: dbdocs-demo.yml  index.md  license.md
docs/plans/: scale-mobile-e2e-branding.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/src/: GraphApp.tsx  data.ts  graph.css  layout.ts  main.tsx  types.ts
frontend/tests/: data.test.ts
tests/: conftest.py
tests/integration/: test_generate_big_project.py  test_generate_jaffle_shop.py
tests/unit/: test_check_dpe_rules.py
(+221 files in other folders)
