[project]
name = "dbdocs"
dynamic = ["version"]
description = "Alternative dbt docs site: Catalog + ERD + column-level lineage"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Dat Nguyen", email = "datnguyen.it09@gmail.com" }]
keywords = ["dbt", "documentation", "lineage", "erd", "dbterd", "sqlglot"]
classifiers = [
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "artifact-parser[dbt]>=1.0.0",
  "click>=8.1",
  "dbterd>=1.28",
  "pydantic>=2.13.4",
  "pyyaml>=6.0",
  "sqlglot>=25",
]

[project.urls]
Homepage = "https://github.com/datnguye/dbt-docs"
Repository = "https://github.com/datnguye/dbt-docs"

[project.scripts]
dbdocs = "dbdocs.main:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["dbdocs"]
artifacts = [
  "dbdocs/site/bundle/**/*",
]

[tool.hatch.build.targets.sdist]
include = [
  "dbdocs",
  "README.md",
  "LICENSE",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "dbt-postgres>=1.5",
  "pdoc>=14.4.0",
  "jsonschema>=4.20",
]
docs = [
  "mkdocs>=1.6,<2.0",
  "mkdocs-material>=9.5,<10",
  "mkdocs-minify-plugin>=0.8",
  "mike>=2.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PLC0415"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.coverage.run]
source = ["dbdocs"]
branch = true
omit = [
  "dbdocs/__main__.py",
  "dbdocs/extract/_sqlglot_lineage.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_also = [
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "\\.\\.\\.",
  "pragma: no cover",
]
